test_programs/compile_failure/noirc_frontend_tests_struct_numeric_generic_in_function/src/main.nr

    struct Foo {
        inner: u64
    }

    pub fn bar<let N: Foo>() {
        let _ = Foo { inner: 1 }; // silence Foo never constructed warning
    }
    